@@ -30,7 +30,7 @@ import jdk.internal.org.objectweb.asm.Label;
 import jdk.internal.org.objectweb.asm.MethodVisitor;
 import jdk.internal.org.objectweb.asm.Opcodes;
 import jdk.internal.vm.annotation.ForceInline;
-import sun.misc.Unsafe;
+import jdk.internal.misc.Unsafe;
 
 import java.lang.invoke.MethodHandles.Lookup;
 import java.security.AccessController;
@@ -957,6 +957,22 @@ public final class StringConcatFactory {
                     storage trimming, which defeats the purpose of exact strategies.
                  */
 
+                /*
+                   The logic for this check is as follows:
+
+                     Stack before:     Op:
+                      (SB)              dup, dup
+                      (SB, SB, SB)      capacity()
+                      (int, SB, SB)     swap
+                      (SB, int, SB)     toString()
+                      (S, int, SB)      length()
+                      (int, int, SB)    if_icmpeq
+                      (SB)              <end>
+
+                   Note that it leaves the same StringBuilder on exit, like the one on enter.
+                 */
+
+                mv.visitInsn(DUP);
                 mv.visitInsn(DUP);
 
                 mv.visitMethodInsn(
@@ -967,7 +983,7 @@ public final class StringConcatFactory {
                         false
                 );
 
-                mv.visitIntInsn(ISTORE, 0);
+                mv.visitInsn(SWAP);
 
                 mv.visitMethodInsn(
                         INVOKEVIRTUAL,
@@ -977,8 +993,6 @@ public final class StringConcatFactory {
                         false
                 );
 
-                mv.visitInsn(DUP);
-
                 mv.visitMethodInsn(
                         INVOKEVIRTUAL,
                         "java/lang/String",
@@ -986,8 +1000,6 @@ public final class StringConcatFactory {
                         "()I",
                         false
                 );
-
-                mv.visitIntInsn(ILOAD, 0);
 
                 Label l0 = new Label();
                 mv.visitJumpInsn(IF_ICMPEQ, l0);
@@ -1003,15 +1015,15 @@ public final class StringConcatFactory {
                 mv.visitInsn(ATHROW);
 
                 mv.visitLabel(l0);
-            } else {
-                mv.visitMethodInsn(
-                        INVOKEVIRTUAL,
-                        "java/lang/StringBuilder",
-                        "toString",
-                        "()Ljava/lang/String;",
-                        false
-                );
             }
+
+            mv.visitMethodInsn(
+                    INVOKEVIRTUAL,
+                    "java/lang/StringBuilder",
+                    "toString",
+                    "()Ljava/lang/String;",
+                    false
+            );
 
             mv.visitInsn(ARETURN);
 
@@ -1485,7 +1497,7 @@ public final class StringConcatFactory {
             //
             // The method handle shape after all length and coder mixers is:
             //   (int, byte, <args>)String = ("index", "coder", <args>)
-            byte initialCoder = 0; // initial coder
+            byte initialCoder = INITIAL_CODER;
             int initialLen = 0;    // initial length, in characters
             for (RecipeElement el : recipe.getElements()) {
                 switch (el.getTag()) {
@@ -1618,11 +1630,14 @@ public final class StringConcatFactory {
         private static final ConcurrentMap<Class<?>, MethodHandle> LENGTH_MIXERS;
         private static final ConcurrentMap<Class<?>, MethodHandle> CODER_MIXERS;
         private static final Class<?> STRING_HELPER;
+        private static final byte INITIAL_CODER;
 
         static {
             try {
                 STRING_HELPER = Class.forName("java.lang.StringConcatHelper");
-            } catch (ClassNotFoundException e) {
+                MethodHandle initCoder = lookupStatic(Lookup.IMPL_LOOKUP, STRING_HELPER, "initialCoder", byte.class);
+                INITIAL_CODER = (byte) initCoder.invoke();
+            } catch (Throwable e) {
                 throw new AssertionError(e);
             }
 
